--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,6 +1,8 @@
 name: golangci-lint
 on:
   push:
+    tags:
+      - v*
     branches:
     - master
   pull_request:
@@ -18,4 +20,4 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: latest
+          only-new-issues: true
